--- a/EnlabsTakeHomeTask/EnlabsTakeHomeTask/src/main/resources/application.properties
+++ b/EnlabsTakeHomeTask/EnlabsTakeHomeTask/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
-
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
